Renamed more dinosaurs

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -58,9 +58,9 @@ env:
   AWS_SECRET_ACCESS_KEY: aws_secretaccesskey
   ROUTE53_ACCESS_KEY: aws_route53_access_key
   ROUTE53_SECRET_ACCESS_KEY: aws_route53_secret_access_key
-  # Dummy Dinosaur TLS env variables
-  DINOSAUR_TLS_CERT: dinosaur_tls_cert
-  DINOSAUR_TLS_KEY: dinosaur_tls_key
+  # Dummy Central TLS env variables
+  CENTRAL_TLS_CERT: central_tls_cert
+  CENTRAL_TLS_KEY: central_tls_key
   # So that OCM secrets are initialised
   DOCKER_PR_CHECK: true
   TEST_TIMEOUT: 30m
@@ -107,7 +107,7 @@ jobs:
         run: make db/migrate
       - name: Setup tests secrets
         run: |
-          make ocm/setup aws/setup redhatsso/setup dinosaurcert/setup observatorium/setup secrets/touch
+          make ocm/setup aws/setup redhatsso/setup centralcert/setup observatorium/setup secrets/touch
       - name: Lint & Test
         run: |
           export GOPATH=$(go env GOPATH)
