ROX-11619 make issuer configurable

--- a/openapi/fleet-manager-private.yaml
+++ b/openapi/fleet-manager-private.yaml
@@ -262,6 +262,8 @@ components:
                       type: string
                     ownerOrgId:
                       type: string
+                    issuer:
+                      type: string
                 uiEndpoint:
                   type: object
                   description: 'Handles GUI/CLI/API connections'
