--- a/.openshift-ci/build-root/Dockerfile
+++ b/.openshift-ci/build-root/Dockerfile
@@ -12,6 +12,8 @@
 
 FROM quay.io/centos/centos:stream9
 
+RUN dnf update && dnf -y install make which
+
 RUN curl -L --retry 10 --silent --show-error --fail -o /tmp/go1.17.12.linux-amd64.tar.gz \
     https://go.dev/dl/go1.17.12.linux-amd64.tar.gz && \
     tar -C /usr/local -xzf /tmp/go1.17.12.linux-amd64.tar.gz && \
@@ -47,5 +49,3 @@ RUN mkdir -p /stackrox/crds && \
 RUN curl -L --retry 10 --silent --show-error --fail -o "/usr/local/bin/ocm" \
     https://github.com/openshift-online/ocm-cli/releases/download/v0.1.30/ocm-linux-amd64 && \
     chmod +x /usr/local/bin/ocm
-
-RUN dnf -y install make
