--- a/templates/secrets-template.yml
+++ b/templates/secrets-template.yml
@@ -63,10 +63,10 @@ parameters:
   description: Client secret used to interact with mas sso
 
 - name: CENTRAL_TLS_CERT
-  description: Dinosaur TLS certificate
+  description: Central TLS certificate
 
 - name: CENTRAL_TLS_KEY
-  description: Dinosaur TLS certificate private key
+  description: Central TLS certificate private key
 
 - name: OBSERVABILITY_CONFIG_ACCESS_TOKEN
   description: Access token for the observability configuration repo
