ROX-11862: Match DNS name to the ADR (#238)

--- a/openapi/fleet-manager-private.yaml
+++ b/openapi/fleet-manager-private.yaml
@@ -407,9 +407,7 @@ components:
           items:
             type: object
             properties:
-              name:
-                type: string
-              prefix:
+              domain:
                 type: string
               router:
                 type: string
