ROX-11861: Remove dinosaurs from fleet-manager CLI (#240)
Removed dinosaurs mentioned in the Fleet Manager CLI
Updated variables, packages and file names related to the CLI, and whatever else was required so that the code compiles.

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ cmd/fleet-manager/fleet-manager
 /secrets/db.ca_cert
 /secrets/aws.*
 /secrets/ocm-service.*
+/secrets/central-tls.*
 /secrets/dinosaur-tls.*
 /secrets/dx.*
 /secrets/observatorium.*
