--- a/templates/secrets-template.yml
+++ b/templates/secrets-template.yml
@@ -62,11 +62,11 @@ parameters:
 - name: SSO_CLIENT_SECRET
   description: Client secret used to interact with mas sso
 
-- name: DINOSAUR_TLS_CERT
-  description: Dinosaur TLS certificate
+- name: CENTRAL_TLS_CERT
+  description: Central TLS certificate
 
-- name: DINOSAUR_TLS_KEY
-  description: Dinosaur TLS certificate private key
+- name: CENTRAL_TLS_KEY
+  description: Central TLS certificate private key
 
 - name: OBSERVABILITY_CONFIG_ACCESS_TOKEN
   description: Access token for the observability configuration repo
@@ -134,8 +134,8 @@ objects:
   metadata:
     name: fleet-manager-dataplane-certificate
   stringData:
-    tls.crt: ${DINOSAUR_TLS_CERT}
-    tls.key: ${DINOSAUR_TLS_KEY}
+    tls.crt: ${CENTRAL_TLS_CERT}
+    tls.key: ${CENTRAL_TLS_KEY}
 
 - apiVersion: v1
   kind: Secret
