added DNS e2e tests (#241)

--- a/dev/env/defaults/00-defaults.env
+++ b/dev/env/defaults/00-defaults.env
@@ -51,6 +51,8 @@ export INSTALL_OLM_DEFAULT="true"
 export FINAL_TEAR_DOWN_DEFAULT="false"
 export DOCKER_CONFIG_DEFAULT="${GITROOT}/.docker"
 export SKIP_TESTS_DEFAULT="false"
+export ENABLE_CENTRAL_EXTERNAL_CERTIFICATE_DEFAULT=false
+export CENTRAL_DOMAIN_NAME_DEFAULT=rhacs-dev.com
 
 export KUBECONF_CLUSTER_SERVER_OVERRIDE_DEFAULT="false"
 
