--- a/dp-terraform/helm/rhacs-terraform/values.yaml
+++ b/dp-terraform/helm/rhacs-terraform/values.yaml
@@ -44,3 +44,11 @@ observability:
     gateway: ""
     metricsClientId: ""
     metricsSecret: ""
+
+# See available parameters in charts/logging/values.yaml
+# - enabled flag is used to completely enable/disable logging sub-chart
+logging:
+  enabled: true
+  aws:
+    accessKeyId: ""
+    secretAccessKey: ""
