ROX-12104: Cleanup secrets in code

--- a/dev/env/manifests/fleet-manager/02-fleet-manager-deployment.yaml
+++ b/dev/env/manifests/fleet-manager/02-fleet-manager-deployment.yaml
@@ -56,7 +56,7 @@ spec:
       volumes:
         - name: secrets
           secret:
-            secretName: fleet-manager
+            secretName: fleet-manager # pragma: allowlist secret
             optional: false
         - name: config
           configMap:
