--- a/dev/env/manifests/fleetshard-sync/01-fleetshard-sync-deployment.yaml
+++ b/dev/env/manifests/fleetshard-sync/01-fleetshard-sync-deployment.yaml
@@ -24,7 +24,7 @@ spec:
             - name: KUBECONFIG
               value: "/secrets/kubeconfig"
             - name: CLUSTER_ID
-              value: "1234567890abcdef1234567890abcdef"
+              value: "1234567890abcdef1234567890abcdef" # pragma: allowlist secret
             - name: FLEET_MANAGER_ENDPOINT
               value: http://fleet-manager:8000
             - name: AUTH_TYPE
@@ -57,7 +57,7 @@ spec:
       volumes:
         - name: secrets
           secret:
-            secretName: fleet-manager
+            secretName: fleet-manager # pragma: allowlist secret
             optional: false
         - name: config
           configMap:
