--- a/templates/service-template.yml
+++ b/templates/service-template.yml
@@ -417,6 +417,42 @@ objects:
   - kind: ConfigMap
     apiVersion: v1
     metadata:
+      name: fleet-manager-admin-authz-config
+      annotations:
+        qontract.recycle: "true"
+      data:
+        admin-authz-roles-dev.yaml: |-
+          - method: GET
+            roles:
+              - "acs-general-engineering"
+              - "acs-fleet-manager-admin-full"
+              - "acs-fleet-manager-admin-read"
+              - "acs-fleet-manager-admin-write"
+          - method: PATCH
+            roles:
+              - "acs-general-engineering"
+              - "acs-fleet-manager-admin-full"
+              - "acs-fleet-manager-admin-write"
+          - method: DELETE
+            roles:
+              - "acs-general-engineering"
+              - "acs-fleet-manager-admin-full"
+        admin-authz-roles-prod.yaml: |-
+          - method: GET
+            roles:
+              - "acs-fleet-manager-admin-full"
+              - "acs-fleet-manager-admin-read"
+              - "acs-fleet-manager-admin-write"
+          - method: PATCH
+            roles:
+              - "acs-fleet-manager-admin-full"
+              - "acs-fleet-manager-admin-write"
+          - method: DELETE
+            roles:
+              - "acs-fleet-manager-admin-full"
+  - kind: ConfigMap
+    apiVersion: v1
+    metadata:
       name: fleet-manager-read-only-user-list
       annotations:
         qontract.recycle: "true"
@@ -538,6 +574,8 @@ objects:
         - "16134752"
         # org_id for the static token
         - "12345678"
+        # ACS RH SSO ORG Development
+        - "16155304"
       fleetshard-authz-org-ids-prod.yaml: |-
         # ACS RH SSO Org Prod
         - "16134752"
@@ -909,6 +947,9 @@ objects:
           - name: fleet-manager-fleetshard-authz-config
             configMap:
               name: fleet-manager-fleetshard-authz-config
+          - name: fleet-manager-admin-authz-config
+            configMap:
+              name: fleet-manager-admin-authz-config
           - name: envoy-config
             configMap:
               # Temporarily use a minimum version of the configmap deployed from this file
@@ -995,6 +1036,12 @@ objects:
             - name: fleet-manager-fleetshard-authz-config
               mountPath: /config/fleetshard-authz-org-ids-prod.yaml
               subPath: fleetshard-authz-org-ids-prod.yaml
+            - name: fleet-manager-admin-authz-config
+              mountPath: /config/admin-authz-roles-dev.yaml
+              subPath: admin-authz-roles-dev.yaml
+            - name: fleet-manager-admin-authz-config
+              mountPath: /config/admin-authz-roles-prod.yaml
+              subPath: admin-authz-roles-prod.yaml
             - name: fleet-manager-dataplane-cluster-scaling-config
               mountPath: /config/dataplane-cluster-configuration.yaml
               subPath: dataplane-cluster-configuration.yaml
