--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -19,3 +19,5 @@ jobs:
         with:
           go-version: "1.17"
       - uses: pre-commit/action@v3.0.0
+        with:
+          extra_args: --hook-stage=manual
