Add missing openapi endpoint & prevent formatting of generated files (#288)
Add previously forgotten POST endpoint to the admin API, which is already implemented in code.
Regenerate api files.
Fix pre-commit configuration to not modify generated files.
Exclude two specific secrets which end up in the generated files (unfortunately the previously added #pragma annotation did not carry over to the generated files).
Run pre-commit run --all-files

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,5 +24,5 @@ repos:
       - id: trailing-whitespace
         args: ["--markdown-linebreak-ext=md"]
       - id: end-of-file-fixer
-        exclude: '^(?:secrets/db.*|.*?VERSION)$' # Matches either secrets/db.* files or the VERSION file under internal/dinosaur/pkg/api/<group>/.openapi-generator
+        exclude: '^(?:secrets/db.*|internal/dinosaur/pkg/api/(admin|private|public)/.*)$' # Matches either secrets/db.* files or the generated files under internal/dinosaur/pkg/api/(admin|private|public)
       - id: check-json
