Implement support for updating central resource configuration. Reworked data model

--- a/openapi/fleet-manager-private-admin.yaml
+++ b/openapi/fleet-manager-private-admin.yaml
@@ -353,6 +353,10 @@ components:
           type: string
         dinosaur_version:
           type: string
+        central:
+          $ref: "fleet-manager.yaml#/components/schemas/CentralSpec"
+        scanner:
+          $ref: "fleet-manager.yaml#/components/schemas/ScannerSpec"
 
   securitySchemes:
     Bearer:
