--- a/openapi/fleet-manager.yaml
+++ b/openapi/fleet-manager.yaml
@@ -595,11 +595,8 @@ components:
                 $ref: "#/components/schemas/Error"
     ResourceList:
       type: object
-      properties:
-        cpu:
-          type: string
-        memory:
-          type: string
+      additionalProperties:
+        type: string
     ResourceRequirements:
       type: object
       properties:
