Add PagerDuty secret.

--- a/dp-terraform/helm/rhacs-terraform/charts/observability/values.yaml
+++ b/dp-terraform/helm/rhacs-terraform/charts/observability/values.yaml
@@ -23,3 +23,7 @@ observatorium:
   gateway: ""
   metricsClientId: ""
   metricsSecret: ""
+
+pagerduty:
+  # PagerDuty integration key, which is generated within a Ruleset.
+  key: ""
