Specify CPU and memory units

--- a/dashboards/grafana-dashboard-acs-fleet-manager.configmap.yaml
+++ b/dashboards/grafana-dashboard-acs-fleet-manager.configmap.yaml
@@ -36,7 +36,7 @@ data:
       "fiscalYearStartMonth": 0,
       "graphTooltip": 0,
       "id": 413,
-      "iteration": 1656321484049,
+      "iteration": 1661826283395,
       "links": [],
       "liveNow": false,
       "panels": [
@@ -386,7 +386,8 @@ data:
                     "value": 80
                   }
                 ]
-              }
+              },
+              "unit": "decbytes"
             },
             "overrides": []
           },
@@ -475,7 +476,8 @@ data:
                     "value": 80
                   }
                 ]
-              }
+              },
+              "unit": "decbytes"
             },
             "overrides": []
           },
@@ -561,7 +563,8 @@ data:
                     "value": 80
                   }
                 ]
-              }
+              },
+              "unit": "s"
             },
             "overrides": []
           },
@@ -655,6 +658,6 @@ data:
       "timezone": "",
       "title": "ACS Fleet Manager",
       "uid": "D1C839d82",
-      "version": 1,
+      "version": 2,
       "weekStart": ""
     }
